--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,12 +68,31 @@ build_typescript_packages:
 
 version_ts_modules:
   stage: test
+
+  variables:
+    GIT_STRATEGY: clone
+
+  before_script:
+    - TOKENED_REPO=http://git:$GITLAB_ACCESS_TOKEN@$GITLAB_HOST:$GITLAB_HTTP_PORT/$GITLAB_REPO_PATH
+    - git remote add gitlab $TOKENED_REPO || git remote set-url gitlab $TOKENED_REPO
+    - git config --global user.email "hydrocarbon-authors@null.io"
+    - git config --global user.name "Gitlab Runner"
+    - git fetch --all
+    - npm config set registry http://$NPM_REGISTRY
+
   script:
     - npm run version_ts_packages
+
+  after_script:
+    - git checkout $STAGED_VERSION_BRANCH
+    - git branch -u gitlab/$STAGED_VERSION_BRANCH
+    - git push
+
   artifacts:
     paths:
+      - "./*.bounty"
       - packages/**/*.bounty
-      - packages/**/package.json
+      - packages/**/*.temp.json
 
   dependencies:
     - fetch_dependencies
@@ -89,7 +108,7 @@ publish_ts_packages:
 
   script:
     - npm config set registry http://$NPM_REGISTRY
-    - npm run collect_publish_bounties
+    - ./root.publish.bounty
 
   dependencies:
     - version_ts_modules
@@ -99,23 +118,20 @@ publish_ts_packages:
 deploy_to_gitlab_branch:
   stage: deploy
 
+  variables:
+    GIT_STRATEGY: clone
+
   before_script:
-    - apt-get update -y && apt-get install -yqqf openssh-client git unzip sshpass rsync --fix-missing
-    - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )"
-    - eval $(ssh-agent -s)
-    - echo "$DEPLOY_KEY" | tr -d '\r' | ssh-add - > /dev/null
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - ssh-keyscan -p $GITLAB_PORT $GITLAB_HOST >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
+    - TOKENED_REPO=http://git:$GITLAB_ACCESS_TOKEN@$GITLAB_HOST:$GITLAB_HTTP_PORT/$GITLAB_REPO_PATH
+    - git remote add gitlab $TOKENED_REPO || git remote set-url gitlab $TOKENED_REPO
     - git config --global user.email "hydrocarbon-authors@null.io"
     - git config --global user.name "Gitlab Runner"
+    - git fetch --all
+    - git checkout --track  gitlab/$STAGED_VERSION_BRANCH
 
   script:
-    - git checkout -d HEAD
-    - npm run collect_commit_bounties
-    - git remote add releases $HCTK_GITHUB_REPO || git remote set-url releases $HCTK_GITHUB_REPO
-    - git push releases HEAD:staged-releases
+    - ./root.commit.bounty
+    - git push -f gitlab HEAD:$STAGED_VERSION_BRANCH
 
   dependencies:
     - version_ts_modules
