--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "1.0.0",
     "description": "Hydrocarbon Language Toolkit Workspace",
     "scripts": {
-        "version_ts_packages": "node ./scripts/version.js",
-        "collect_publish_bounties": "node ./scripts/collect_publish_bounties.js",
-        "collect_commit_bounties": "node ./scripts/collect_commit_bounties.js"
+        "version_ts_packages": "node ./scripts/version.js"
     },
     "workspaces": [
         "packages/core/*",
